--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,7 +23,7 @@
       width: 340px
 @media (max-width: 768px)
   .container
-    max-width: 670px
+    max-width: 700px
     width: 92%
 @media (max-width: 650px)
   .container
@@ -65,8 +65,10 @@
         margin-bottom: 10px
       &__text
         justify-content: space-between
+
       &__stars
         flex-basis: auto
+        margin-bottom: 10px
 @media (max-width: 320px)
   .logo
     width: 99px
